tests/run/error_match_nonenum.out
tests/run/error_match_nonenum.ig:7:14: error: a variant pattern cannot match a scalar/string value; use a literal (e.g. `case 0`), a value binding (`case n`), or `_`
